security+perf: lock down JWT/secrets, fix tenant-leak, enable batching Bundles the top-5 findings from the full-API audit. Three are security blockers (CRITICAL); the other two are correctness/perf fixes that unblock further work. Tests: 716 passing, 0 failures. ── Security ────────────────────────────────────────────────────────── - Remove hardcoded JWT secret fallback from application.yml. The committed   default could sign tokens for any user/tenant. Now ${TGS_JWT_SECRET} is   mandatory; JwtKeyConfig validates non-blank + Base64 + >=64 bytes and   fails fast at startup with an actionable message. - Remove leaked GitHub PAT (ghp_…) from application.properties. The token   must be revoked in GitHub and purged from history separately. - Close anonymous self-signup: SecurityConfig.permitAll now covers only   /api/auth/login and /api/auth/refresh (not /api/auth/**), and   /api/auth/register requires ADMIN_USER_WRITE. Previously any anonymous   caller could POST with an arbitrary companyId and land a USER inside   that tenant. Operational user provisioning stays on /api/admin/users. - Gate SQL logging behind ${TGS_SHOW_SQL:false} / ${TGS_SQL_LOG_LEVEL:info}   so the dev defaults can't leak parameter values (incl. password update   statements) in production logs. - src/test/resources/application.yml provides a test-only JWT secret so   @SpringBootTest does not require the env var. ── Correctness ────────────────────────────────────────────────────── - JwtAuthenticationFilter: wrap entire doFilterInternal in try/finally   with TenantContext.clear(). Previously any non-JWT RuntimeException   from loadUserByUsername (DB outage, lock timeout) bypassed the cleanup,   leaving the Tomcat worker's ThreadLocal poisoned for the next request.   Cross-tenant data exposure under load. - Replace jakarta.transaction.Transactional with Spring's in   VehicleRemovalService, VehicleAssignmentService and BaseRepositoryImpl.   JTA semantics differ on propagation/rollback and ignore readOnly